--- a/Bosch DigiCard/My Project/Settings.settings
+++ b/Bosch DigiCard/My Project/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="BroadSearch" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DownloadPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
