--- a/Bosch DigiCard/My Project/Settings.settings
+++ b/Bosch DigiCard/My Project/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DownloadPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GoogleMapsAPIKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
