--- a/Bosch DigiCard/packages.config
+++ b/Bosch DigiCard/packages.config
@@ -4,6 +4,7 @@
   <package id="GMap.NET.Core" version="2.1.7" targetFramework="net472" />
   <package id="GMap.NET.WinForms" version="2.1.7" targetFramework="net472" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
+  <package id="Microsoft.PowerShell.Commands.Utility" version="7.4.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.3" targetFramework="net472" />
