--- a/Bosch DigiCard/My Project/Settings.settings
+++ b/Bosch DigiCard/My Project/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="GoogleMapsAPIKey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FuzzySearch" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
